<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llDone"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:background="@drawable/circular_item_accent_border"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/tvCongratulations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/exercise_over_done_image"
                android:src="@drawable/ic_done" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvCongratulations"
            style="@style/ThemeDefaultText"
            android:layout_marginBottom="8dp"
            android:text="@string/exercise_over_congratulations"
            app:layout_constraintBottom_toTopOf="@+id/tvCongratulationsMsg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDone" />

        <TextView
            android:id="@+id/tvCongratulationsMsg"
            style="@style/ThemeDefaultText"
            android:layout_marginBottom="32dp"
            android:text="@string/exercise_over_congratulations_msg"
            app:layout_constraintBottom_toTopOf="@+id/btnFinish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCongratulations" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFinish"
            style="@style/ThemePillBtn"
            android:text="@string/exercise_over_btn_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCongratulationsMsg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>