<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="home"
            type="com.anibalventura.t7minutesworkout.ui.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivHomeLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/home_logo_description"
            android:src="@drawable/home_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/home_btn_start"
            android:onClick="@{() -> home.btnPressed(&quot;start&quot;)}"
            android:padding="16dp"
            android:text="@string/home_btn_start"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
            app:layout_constraintVertical_bias="0.20" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBmi"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/home_btn_start"
            android:onClick="@{() -> home.btnPressed(&quot;bmi&quot;)}"
            android:text="@string/home_btn_bmi"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnHistory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHistory"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/home_btn_start"
            android:onClick="@{() -> home.btnPressed(&quot;history&quot;)}"
            android:text="@string/home_btn_history"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBmi"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>