<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bmiFragment"
            type="com.anibalventura.t7minutesworkout.ui.BmiFragment" />

        <variable
            name="bmiViewModel"
            type="com.anibalventura.t7minutesworkout.data.viewmodel.BmiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RadioGroup
            android:id="@+id/rgUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_group_tab_bg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rbMetricUnits"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.50"
                android:background="@drawable/units_tab_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/bmi_metric_units"
                android:textColor="@drawable/units_tab_text_color_selector"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbUsUnits"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.50"
                android:background="@drawable/units_tab_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/bmi_us_units"
                android:textColor="@drawable/units_tab_text_color_selector"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMetricsUnits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@+id/clBMIResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgUnits"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMetricUnitWeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tilMetricUnitHeight"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMetricUnitWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bmi_metric_weight"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMetricUnitHeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tilMetricUnitWeight"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMetricUnitHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bmi_metric_height"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clUsUnits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/clBMIResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgUnits"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsUnitWeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tilUsUnitHeight"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsUnitWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bmi_us_weight"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsUnitHeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tilUsUnitWeight"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsUnitHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bmi_us_height"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBMIResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clMetricsUnits"
            app:layout_constraintVertical_chainStyle="packed"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvYourBMI"
                style="@style/ThemeDefaultText"
                android:text="@string/bmi_your_result"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clBMIResult"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBMIValue"
                style="@style/ThemeDefaultText"
                android:text="@{bmiViewModel.bmiValue}"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvBMILabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYourBMI"
                tools:text="15.00" />

            <TextView
                android:id="@+id/tvBMILabel"
                style="@style/ThemeDefaultText"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@{bmiViewModel.bmiLabel}"
                app:layout_constraintBottom_toTopOf="@+id/tvBMIDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBMIValue"
                tools:text="Normal" />

            <TextView
                android:id="@+id/tvBMIDescription"
                style="@style/ThemeDefaultText"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@{bmiViewModel.bmiDescription}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBMILabel"
                tools:text="Congratulations! You are in a good shape!" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalculate"
            style="@style/ThemePillBtn"
            android:onClick="@{() -> bmiFragment.calculateUnits()}"
            android:text="@string/bmi_calculate"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clBMIResult" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>